fix: fix heading link icon color in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,10 +122,6 @@ h4 {
       transition: all 0.15s ease-in-out;
       opacity: 0;
 
-      [data-theme='dark'] & {
-        filter: invert(1) opacity(0.5);
-      }
-
       @media (max-width: 75ch) {
         left: -1.5rem;
       }
@@ -133,6 +129,10 @@ h4 {
 
     &:hover::before {
       opacity: 1;
+    }
+
+    [data-theme='dark'] &::before {
+      filter: invert(1) opacity(0.5);
     }
   }
 
